Fixed accordion text wraping issues on mobile

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -301,3 +301,7 @@ textarea.readonly {
 .flex-grow {
     flex-grow: 1;
 }
+
+.btn.btn-link {
+    white-space: normal;
+}
